fdo#54651: Only pick non-default number format for pivot field.

Change-Id: Ia88282803c8df8389ed24efd8b1ca7600a39bf23
(cherry picked from commit dd1b3ca024a85597b46778a62007bb966174368d)
Reviewed-on: https://gerrit.libreoffice.org/2585
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>